tweeking of css media querys and styles in general for responsivnes

--- a/src/Components/Cards/CountryCards/CountryCards.module.css
+++ b/src/Components/Cards/CountryCards/CountryCards.module.css
@@ -22,3 +22,9 @@
 .tested{
     border-bottom: 10px solid #ffcc80;
 }
+
+@media only screen and (max-width: 960px){
+    .card{
+        margin-bottom: 20px !important;
+    }
+}
