--- a/src/Components/Cards/Cards.module.css
+++ b/src/Components/Cards/Cards.module.css
@@ -1,5 +1,7 @@
 .container{
     margin: 50px 0;
+    padding: 0 15px;
+    max-width: 100%;
 }
 
 .card{
@@ -16,4 +18,17 @@
 
 .deaths{
     border-bottom: 10px solid #e57373;
+}
+
+@media only screen and (max-width: 960px){
+    .card{
+        margin: 0 20px !important;
+    }
+}
+
+@media only screen and (max-width: 600px){
+    .card{
+        margin-bottom: 20px !important;
+        max-width: 90% !important; 
+    }
 }
